Added generated and hand-written tests plus checkstyle fixes